--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+## default connection pool
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
 
+## PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost/TacoCloud
+spring.datasource.username=postgres
+spring.datasource.password=piolit1
+
+#drop n create table again, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto= update
